[gd_scene load_steps=5 format=3 uid="uid://c7c0ymusji584"]

[ext_resource type="Script" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Number_Counter_Float.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://c0mw0jwbq1np4" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/input_templateBuffer.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://cw2c256dbf611" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Navigation_Scenes/NavigationButtonTemplate.tscn" id="3_2nwuv"]
[ext_resource type="PackedScene" uid="uid://b0x40ln8a6syy" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Input_Label_Template.tscn" id="4"]

[node name="Number_Counter" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
script = ExtResource("1")
label_text = "Number_Counter"

[node name="Label" parent="." instance=ExtResource("4")]
layout_mode = 2

[node name="HBox1" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Input" type="LineEdit" parent="HBox1"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "0"
alignment = 1
caret_blink = true

[node name="VBox1" type="VBoxContainer" parent="HBox1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.26

[node name="Add_Button1" type="Button" parent="HBox1/VBox1"]
visible = false
layout_mode = 2
size_flags_vertical = 3
text = "+"

[node name="Sub_Button1" type="Button" parent="HBox1/VBox1"]
visible = false
layout_mode = 2
size_flags_vertical = 3
text = "-"

[node name="Add_Button" parent="HBox1/VBox1" groups=["Table Action"] instance=ExtResource("3_2nwuv")]
self_modulate = Color(0.37, 0.16, 0.79, 1)
layout_mode = 2
size_flags_vertical = 3
custom_text = "+"
auto_connect_signals = false
auto_set_minimum_size = false

[node name="Sub_Button" parent="HBox1/VBox1" groups=["Table Action"] instance=ExtResource("3_2nwuv")]
self_modulate = Color(0.37, 0.16, 0.79, 1)
layout_mode = 2
size_flags_vertical = 3
custom_text = "-"
auto_connect_signals = false
auto_set_minimum_size = false

[node name="input_templateBuffer" parent="." instance=ExtResource("2")]
layout_mode = 2

[connection signal="text_changed" from="HBox1/Input" to="." method="_on_input_text_changed"]
[connection signal="button_up" from="HBox1/VBox1/Add_Button" to="." method="_on_Add_Button_button_up"]
[connection signal="button_up" from="HBox1/VBox1/Sub_Button" to="." method="_on_Sub_Button_button_up"]
